<resources>
    <string name="app_name">Simon Say</string>
    <string name="repeat">REPEAT</string>
    <string name="easy">EASY</string>
    <string name="classic">classic</string>
    <string name="medium">MEDIUM</string>
    <string name="f_good">feeling good</string>
    <string name="f_expert">feeling expert</string>
    <string name="hard">HARD</string>
    <string name="best_score">Best Score</string>
    <string name="all_scores">All Scores</string>
    <string name="Leader_score">Leader Score</string>
    <string name="date">DATE</string>
    <string name="level">Level</string>
    <string name="score">Score</string>
    <string name="nickname">nickname</string>
    <string name="resume">Resume</string>
    <string name="watch">WATCH</string>
    <string name="play">Play</string>
</resources>
